--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -41,7 +41,7 @@ keepspaces=true,
 
 \geometry{a4paper, left=30mm, right=30mm, top=30mm, bottom=30mm}
 \title{Modellizzazione della resistenza di diodi a giunzione PN per alte correnti di lavoro}
-\author{L. Ciucci(\thanks{Dipartimento di Fisica E. Fermi, Universit\`a di Pisa - Pisa, Italy} ) \and B. Tomelleri(\protect\footnotemark[1] ) \and S. Bruzzesi(\protect\footnotemark[1] )}
+\author{L. Ciucci(\thanks{Dipartimento di Fisica E. Fermi, Universit\`a di Pisa - Pisa, Italy} ) \and S. Bruzzesi(\protect\footnotemark[1] ) \and B. Tomelleri(\protect\footnotemark[1] )}
 \date{2020/11/01}
 
 \begin{document}
@@ -49,8 +49,7 @@ keepspaces=true,
 \begin{mdframed}
 \textbf{Riassunto:} --- Tramite la piattaforma di sviluppo Arduino\cite{arduino} studiamo campionamenti digitali, di segnali ai capi di diodi in silicio PN. Discutiamo la struttura di base e i comportamenti attesi del sistema e ne illustriamo il funzionamento con qualche esempio pratico.\\\\
 PACS 01.40.-d – Education.\\
-PACS 01.50.Pa – Laboratory experiments and apparatus.\\
-PACS 07.05.Hd – Data acquisition: hardware and software.
+PACS 01.50.Pa – Laboratory experiments and apparatus.
 \end{mdframed}
 \section{Resistenza del Diodo}
 Consideriamo il nostro multimetro digitale come un ottimo voltmetro\footnote{Nel senso di dotato di resistenza in ingresso molto alta $R_{\rm in} = 10 \; \si{\mega\ohm}$ nominali}: dunque supponiamo che, per far leva su questo, misuri indirettamente la resistenza di un componente imprimendo su di esso una corrente $I_{\rm in}$ generata (dunque nota) dallo strumento stesso, quindi misurando la caduta di tensione che si determina ai capi del carico resistivo considerato $R_{\rm L}$. Per materiali ohmici la misura di resistenza si ottiene appunto invertendo la legge di Ohm:
@@ -75,7 +74,7 @@ I_{\rm in} = \frac{\Delta V_{\rm mis}}{R_{\rm L}} \implies R_{\rm L} = \frac{\De
 	to[short] (0,0);
 	\draw (2,2)
 	to[short] (5,2)
-	to[voltmeter, v=$\Delta V_{\rm mis}$] (5,0)
+	to[voltmeter, l=$\Delta V_{\rm mis}$] (5,0)
 	to[short] (2,0);
 	to[short] (4,0);
 \end{circuitikz}
