--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -1,4 +1,4 @@
-\documentclass{article}[a4paper, oneside ,11pt]
+\documentclass{article}[a4paper, oneside, 11pt]
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{calc}
@@ -58,32 +58,10 @@ Per poter modellare il comportamento di un diodo percorso da correnti alte, si p
 \section{Metodo e apparato sperimentale}
 Dovendo lavorare con correnti relativamente alte per il circuito sotto studio, al fine di minimizzare effetti termici-dissipativi secondari ed evitare danni all'apparato, si imprimono sui componenti correnti pulsate o di durate molto brevi, limitando dunque il trasferimento di energia sui componenti.
 \subsection{Acquisizione dati}
-Si è fatto uso della piattaforma di sviluppo \verb+Teensy 3.2+\cite{teensy} per il campionamento di segnali, essendo non solo più veloce e capiente in memoria rispetto ad Arduino, ma oltretutto dotato di due ADC, entrambi con risoluzione maggiore nel campionamento analogico, a 16 bit. Questo ad esempio ci permette di misurare -simultaneamente- la differenza di potenziale e intensità di corrente, dunque la curva caratteristica del diodo in esame. 
+Si è fatto uso della piattaforma di sviluppo \verb+Teensy 3.2+\cite{teensy} per il campionamento di segnali, essendo non solo più veloce e capiente in memoria rispetto ad Arduino, ma oltretutto dotato di due ADC, entrambi con risoluzione maggiore nel campionamento analogico, a 16 bit. Questo ad esempio ci permette di misurare -simultaneamente- la differenza di potenziale e intensità di corrente, dunque la curva caratteristica del diodo in esame. Per prima cosa si sono misurati i rispettivi fattori di conversione $\xi_{\rm V}$ [V/digit] e $\xi_I$ [A/digit] tramite un fit lineare sui campionamenti di tensione e corrente continua generati da un trasformatore di d.d.p $V_0 \approx 4.95$ V. Come illustrato sotto:
+\input{./figs/thev.tex}
 \subsection{Schema circuitale del sistema}
-\begin{center}
-\begin{circuitikz}[american]
-\draw (2,4)
-	to[short, f>^=$\text{CH1}_{\rm osc}$] (0,4)
-	node[oscopeshape] {};		
-\draw (2,2)
-	to[short,*-, f>^=$\text{CH2}_{\rm osc}$] (0,2)
-	node[oscopeshape] {};
-\draw (0,0)
-	to[short] (0,4)
-	to[short] (2,4)
-	to[R=0.22 <\ohm>, *-] (2,2)
-	to[Do, l=1N4007, -*] (2,0)
-	to[short] (0,0)
-	to[short,-*] (5,0)
-	to[short] (5,-0.2)
-	node[eground]{};	
-\draw (2,0)
-	to[short] (5,0)
-	to[C, l_=100<\farad>] (5,5)
-	to[spst, l_=SW$_1$] (2,5)
-	to[short] (2,4);
-\end{circuitikz}
-\end{center}
+%\input{simpletikz.tex}
 \begin{figure}[!htb]
 	\centering 
  		\includegraphics[scale=2.2]{./simple.pdf}
@@ -99,9 +77,18 @@ Si è fatto uso della piattaforma di sviluppo \verb+Teensy 3.2+\cite{teensy} per
  		\includegraphics[scale=2.2]{./measure.pdf}
  	\caption{Schema circuitale del sistema di lettura (Teensy) \label{sch:rdng}}
 \end{figure}
-Come ultima cautela preliminare, per minimizzare le influenze esterne sulla misura della componente resistiva del diodo, si sono misurate le resistenze dei collegamenti del circuito. 
-%Per stabilire sotto quali condizioni essi risultino trascurabili.
-\section{Risultati e Analisi dati}
+Come ultima cautela preliminare, per minimizzare le influenze esterne sulla misura della componente resistiva del diodo, si sono misurate le resistenze dei collegamenti del circuito, in quanto i cavi reali e gli ingressi del diodo possono avere resistenze non trascurabili rispetto a quella opposta dal diodo in regime di conduzione, nell'ordine di qualche ohm.
+
+Tramite il semplice circuito con interruttore in Figura \ref{sch:smpl} riusciamo a ricostruire sperimentalmente la curva caratteristica V-$I$ del diodo: si lascia scaricare repentinamente il condensatore sulla serie diodo-resistenza chiudendo l'interruttore, dunque dai canali di un oscilloscopio si misura la curva risultante.
+
+Vista la stabilità poco attendibile del circuito con interruttore azionato manualmente si è costruito una seconda versione del circuito (Fig. \ref{sch:gest}), in cui figura un sottocircuito di switch e un condensatore di capacità maggiore di un paio di ordini di grandezza. Infine si aggiunge la maglia a destra del condensatore, impiegata per caricare (e scaricare) quest'ultimo a diverse tensioni, controllate grazie a Teensy.
+Si sviluppano due casi principali:
+
+Se lasciamo caricare gradualmente il condensatore, essendo C decisamente maggiore rispetto ai condensatori precedenti si ha un tempo di carica $\tau = RC$ abbastanza prolungato, in cui possiamo campionare contemporaneamente tensione e corrente ai capi del diodo per correnti modeste, nel regime in cui il diodo è "interdetto" ed oppone resistenza al flusso di carica.
+
+Viceversa, nel regime in cui si applichi al diodo una d.d.p. ben al disopra di $V_{\rm thr} \approx 0.6 $V, che siamo liberi di esplorare variando la tensione di carica di C con il sottocircuito destro, il diodo idealmente lascia passare tutta la corrente impressa sulla giunzione. Allora per caratterizzare la risposta del diodo senza cambiarne drasticamente le caratteristiche (ad esempio per eccessiva agitazione termica) si impiega il circuito di switch per imprimere impulsi di alta corrente e breve durata sulla giunzione PN, di cui misuriamo la curva caratteristica in risposta con i due ADC di Teensy. 
+
+Se effettivamente il diodo, oltre ad una certa soglia di d.d.p. inizia ad avere componente resistiva sempre più pronunciata, allora riportando le nostre previsioni in carta semilogaritmica ci si aspetterebbe di trovare una retta, entro il regime in cui è valida l'approssimazione di Shockley, ma oltre a questo, una regione in cui la curva caratteristica della giunzione ora mostra una dipendenza apprezzabilmente più lineare/ohmica dell'intensità di corrente dalla $\Delta$V rispetto a prima, a cui corrisponderebbe il grafico "piatto" di un logaritmo.  \section{Risultati e Analisi dati}
 \subsection{Nota sul metodo di fit}
 Per determinare i parametri ottimali e le rispettive varianze si \`e implementato un metodo di fit basato sui minimi quadrati in \verb+Python+ mediante la funzione \emph{curve\_fit} della libreria Scipy\cite{scipy}.
 \pagebreak
