--- a/LaTeX/figs/thev.tex
+++ b/LaTeX/figs/thev.tex
@@ -6,7 +6,7 @@
 	to[R=$R_c$, *-*] (0,3)
 	to[ammeter, i=$I_{\rm mis}$] (5,3)
 	to[short, -*] (5,0)
-	node[eground]{};
+	node[ground]{};
 \draw (0, 0)
 	to [short] (-2, 0)
 	to [voltmeter, v^=$V_{\rm mis}$] (-2, 3)
